--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.6"
 edition = "2021"
 license-file = "LICENSE"
 description = "Sol's RNG but CLI!"
-repository = "https://github.com/FBDev64/cli-rng.git"
-homepage = "https://github.com/FBDev64/cli-rng"
+repository = "https://github.com/FBDev64/terminal-rng.git"
+homepage = "https://github.com/FBDev64/terminal-rng"
 readme = "README.md"
 categories = ["games"]
 
